[package]
name = "hermes-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the Hermes Agent API server (Responses API)"
license = "MIT"

[workspace]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
